Changed VU logo and fixed the alignment

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -158,7 +158,6 @@
 	.footer {
 		padding: 10px;
 		padding-bottom: 6px;
-		padding-top: 50px;
 		margin-left: auto;
 		margin-right: auto;
 		clear: both;
